[project]
name = "agno-agent-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno==2.0",
    "chromadb>=1.5.8",
    "fastapi>=0.135.3",
    "mcp>=1.27.0",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "yfinance>=1.3.0",
]
